--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -1,7 +1,7 @@
 ---
 layout: archive
 permalink: /year-archive/
-title: "Thoughts (Technical, Startups & Entrepreneurship, Book Summaries, Experiences & Ideas...)"
+title: "Blog"
 author_profile: true
 redirect_from:
   - /wordpress/blog-posts/
