--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -6,6 +6,7 @@ author_profile: true
 redirect_from:
   - /wordpress/blog-posts/
 ---
+Follow me on [Medium](https://medium.com/@chirathyh) for my latest articles.
 
 {% include base_path %}
 {% capture written_year %}'None'{% endcapture %}
