--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -1,12 +1,11 @@
 ---
 layout: archive
 permalink: /year-archive/
-title: "Blog"
+title: "Follow me on <a href="https://medium.com/@chirathyh">Medium</a> for my latest articles."
 author_profile: true
 redirect_from:
   - /wordpress/blog-posts/
 ---
-Follow me on [Medium](https://medium.com/@chirathyh) for my latest articles.
 
 {% include base_path %}
 {% capture written_year %}'None'{% endcapture %}
