Update and rename talks.html to short-notes.html

--- a/_pages/short-notes.html
+++ b/_pages/short-notes.html
@@ -1,8 +1,8 @@
 ---
 layout: archive
-title: "Talks"
-permalink: /talks/
-author_profile: true
+title: "Short Notes"
+permalink: /short-notes/
+author_profile: false
 ---
 
 {% if site.talkmap_link == true %}
