--- a/_pages/short-notes.html
+++ b/_pages/short-notes.html
@@ -4,6 +4,7 @@ title: "Short Notes"
 permalink: /short-notes/
 author_profile: false
 ---
+<script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
 
 {% if site.talkmap_link == true %}
 
