--- a/_pages/short-notes.html
+++ b/_pages/short-notes.html
@@ -2,7 +2,7 @@
 layout: archive
 title: "Short Notes"
 permalink: /short-notes/
-author_profile: false
+author_profile: true
 ---
 {% if site.talkmap_link == true %}
 
